--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.0",
+    "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.3",
     "react-select": "^5.8.1",
-    "sort-by": "^0.0.2"
+    "redux-persist": "^6.0.0",
+    "sort-by": "^0.0.2",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
